update for snippets.lang in Romansh (rm)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104495 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/rm/snippets.lang
+++ b/rm/snippets.lang
@@ -122,6 +122,6 @@ Utiliseschas ti Firefox sin differents computers? Ussa pos ti sincronisar tes su
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Spert, spert, spert. <a %s>Firefox per Android ha gist retschavì ina gronda actualisaziun</a>. Ans gida da derasar questa infurmaziun.
 
 
