--- a/ja/upgradedialog.lang
+++ b/ja/upgradedialog.lang
@@ -1,92 +1,92 @@
 ;Get the Newest Firefox
-<br />
+Firefox の最新版を入手
 
 
 ;The Newest Firefox is Here!
-<br />
+Firefox の最新版が完成！
 
 
 ;<a %s>Quick, easy and free update</a>
-<br />
+<a %s>短時間で簡単無料アップグレード</a>
 
 
 ;Fresh new look
-<br />
+刷新されたユーザインタフェース
 
 
 ;Much faster than Firefox 3.6
-<br />
+Firefox 3.6 よりはるかに高速
 
 
 ;More awesomeness than ever
-<br />
+魅力的な新機能
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+インターネット上の脅威からあなたを守る Firefox の新バージョンがあります
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
-<a %s>Get the upgrade</a> — it’s fast & free!
+<a %s>今すぐアップグレード</a> — 高速・無料です
 
 
 ;get the latest in security
-get the latest in security
+最新のセキュリティ更新を自動で入手
 
 
 ;experience faster performance
-experience faster performance
+ページの読み込みがより高速に
 
 
 ;enjoy greater customization
-enjoy greater customization
+カスタマイズの柔軟性も向上
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+あなたが今お使いの Firefox は古く、今後 Web 上で攻撃を受ける恐れがあります。
 
 
 ;Stay safe online
-Stay safe online
+ネット環境をより安全に
 
 
 ;Enjoy new features
-Enjoy new features
+新機能も満載
 
 
 ;URGENT!
-URGENT!
+緊急告知
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+あなたが今お使いの Firefox は古く、Web 上での攻撃から保護されていません。
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+これが、最新版への自動更新が行われる前の最後の通知となります。
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+あなたが今お使いの Firefox は古く、今後 Web 上で攻撃を受ける恐れがあります。
 
 
 ;We recommend:
-We recommend:
+以下のいずれかを推奨します。
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+<a %s>OS</a> を更新する
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+対応している他のブラウザへ移行する
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+お使いの <a %s>OS</a> に無料アップグレードをインストール
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+最新版への自動更新が行われる前に、再度このような通知が表示されます。
 
 
