--- a/rm/newsletter.lang
+++ b/rm/newsletter.lang
@@ -62,7 +62,7 @@ Legia tut davart noss <span>newsletter</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Tes abunament dal newsletter è vegnì confermà.
 
 
 ;Format
@@ -70,110 +70,110 @@ Format {ok}
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Ussa èsi fatg! <span>Ma spetga, i dat dapli</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Vuls retschaiver las infurmaziuns las pli relevantas? Ans raquinta dapli davart dai. E sche ti es gia qua, abunescha anc autras novitads da Mozilla.
 
 
 ;Firefox & You
-Firefox & You
+Firefox & ti
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Nos auters newsletters:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Retschaiva ils pli novs tips e trics per lavurar il pli simpel cun tes navigatur favurisà.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox mobil
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Emprenda dapli davart ils pli cools supplements e las pli novas funcziuns da Firefox mobil.
 
 
 ;Beta News
-Beta News
+Novitads da beta
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Legia tut davart las novas funcziuns per Firefox desktop e Firefox mobil avant che las versiuns finalas vegnan publitgadas.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Lain daventar amis!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox fa era part da tias raits socialas favurisadas. Ta collia cun nus e fa part da las discussiuns.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Administrar tes <span>abunaments da newsletters</span>
 
 
 ;Subscribe
-Subscribe
+Abunar
 
 
 ;Unsubscribe
-Unsubscribe
+Annullar l'abunament
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Tscherna quai sche ti vuls vegnir allontanà da tut ils newsletters da Mozilla
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+M'allontanar da tut ils newsletters da Mozilla
 
 
 ;Save Preferences
-Save Preferences
+Memorisar las preferenzas
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Grazia per actualisar tias preferenzas dad e-mail.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Ti has abunà cun success.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Donn che ti na vuls retschaiver naginas infurmaziuns pli. Ans vuls ti dir pertge?
 
 
 ;You send too many emails.
-You send too many emails.
+Vus tramettais memia blers e-mails.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Voss cuntegn n'è betg stà relevent per mai.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Vos design dals e-mails era memia cumplitgà per leger.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Jau n'hai mai abunà questas infurmaziuns.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Jau sun empè en contact cun Mozilla sin Twitter u Facebook.
 
 
 ;Submit
-Submit
+Trametter
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Grazia che ti ans has raquintà pertge che ti es partì.
 
 
