l10n: mk, firefox final page update, translation by Novica Nakov
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104502 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/mk/download.lang
+++ b/mk/download.lang
@@ -35,6 +35,6 @@ Mozilla Firefox е слободен прелистувач создаден од
 
 
 ;Mozilla Firefox Web Browser
-Mozilla Firefox Web Browser
+Mozilla Firefox мрежен прелистувач
 
 
