--- a/vi/upgradedialog.lang
+++ b/vi/upgradedialog.lang
@@ -23,35 +23,35 @@ Và nhiều điều kỳ diệu khác
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Có bản Fireofx mới hơn, an toàn hơn, bảo vệ bạn khi lướt Web.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
-<a %s>Hãy tải bản nâng cấp</a> - nhanh và miễn phí!
+<a %s>Tải nâng cấp</a> - nhanh và miễn phí!
 
 
 ;get the latest in security
-get the latest in security
+tin mới nhất về an minh mạng
 
 
 ;experience faster performance
-hiệu năng nhanh hơn
+hiệu năng tốt hơn
 
 
 ;enjoy greater customization
-enjoy greater customization
+tùy biến dễ hơn
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Phiên bản Firefox của bạn sẽ sớm không an toàn đối với tấn công mạng
 
 
 ;Stay safe online
-an toàn trên mạng
+Online an toàn
 
 
 ;Enjoy new features
-tận hưởng tính năng mới
+Tận hưởng tính năng mới
 
 
 ;URGENT!
@@ -63,30 +63,30 @@ Phiên bản Firefox của bạn không còn được bảo vệ chống lại c
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Đây là thông báo cuối cùng, bạn sẽ được tự động nâng cấp lên bản mới nhất
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox không còn hỗ trợ hệ điều hành bạn đang dùng; bạn sẽ bị nguy cơ tấn công trực tuyến.
 
 
 ;We recommend:
-We recommend:
+Chúng tôi khuyến nghị:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Nâng cấp <a %s>hệ điều hành</a> của bạn
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Tải trình duyệt tương thích
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Cài đặt bả nâng cấp miễn phí cho <a %s>hệ điều hành</a> của bạn
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Chúng tôi sẽ nhắc bạn một lần nữa trước khi tự động nâng cấp.
 
 
