--- a/vi/firefoxtesting.lang
+++ b/vi/firefoxtesting.lang
@@ -1,16 +1,17 @@
-# These strings are used on http://www-dev.allizom.org/firefox/beta/ http://www-dev.allizom.org/mobile/beta/ and will also be used in future Aurora download pages
+﻿# These strings are used on http://www-dev.allizom.org/firefox/beta/ http://www-dev.allizom.org/mobile/beta/ and will also be used in future Trang tải Aurora
 
 
 ;Download Firefox Beta for Android - Free
-Download Firefox Beta for Android - Free
+Tải bản Firefox Beta cho Android - Miễn phí
 
 
 ;Download Firefox Beta for Desktop - Free
-Download Firefox Beta for Desktop - Free
+Tải Firefox Beta cho Desktop - Miễn phí
 
 
 ;Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
-Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
+Tải và trải nghiệm bản Firefox của tương lai. Thử dùng những tính năng sáng tạo mới nhất trên Aurora hoặc bản Beta.
+
 
 
 ;Firefox Beta
@@ -18,42 +19,45 @@ Firefox Beta
 
 
 ;Firefox Beta for:
-Firefox Beta for:
+Firefox Beta cho:
 
 
 ;Firefox Beta for Mobile
-Firefox Beta for Mobile
+Firefox Beta cho Di Động
 
 
 ;Download Beta and be part of the next version of Firefox.
-Download Beta and be part of the next version of Firefox.
+Tải bản Beta, cùng xây dựng bản Firefox tiếp theo.
+
 
 
 ;1. Test Features
-1. Test Features
+1. Chức năng thử nghiệm
 
 
 ;Try out the latest performance, customization and security enhancements almost ready for prime time.
-Try out the latest performance, customization and security enhancements almost ready for prime time.
+Thử nghiệm hiệu năng, khả năng tùy biến, cải tiến về an ninh - đã sẵn sàng.
 
 
 ;2. Refine &amp; Polish
-2. Refine &amp; Polish
+2. Cải tiến &amp; Hoàn thiện
 
 
 ;File bugs to help us put the final tweaks on performance and functionality in a stable environment.
-File bugs to help us put the final tweaks on performance and functionality in a stable environment.
+Thông báo lỗi phần mềm để giúp chung tôi tối ưu hiệu năng, chức năng trên một môi trường ổn định.
+
 
 
 ;3. Do Your Part
-3. Do Your Part
+3. Đóng góp của bạn
+
 
 
 ;Have an impact on the next version of Firefox and the 450 million people who use it every day.
-Have an impact on the next version of Firefox and the 450 million people who use it every day.
+Hãy đóng góp cho bản Firefox tiếp theo cho 450 triệu người dùng nó hàng ngày.
+
 
 
 ;Supported devices
-Supported devices
-
+Thiết bị hỗ trợ
 
