l10n: mk, newsletter strings, translation by Novica Nakov
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104516 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/mk/newsletter.lang
+++ b/mk/newsletter.lang
@@ -26,7 +26,7 @@
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
-Прочитајте ја политиката за приватност на Mozilla Privacy Policy и штиклирајте ако се согласувате.
+Прочитајте ја политиката за приватност на Mozilla и штиклирајте ако се согласувате.
 
 
 ;I agree to the <a href="%s">Privacy Policy</a>
@@ -50,130 +50,132 @@
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
+Претплатете се на месечни новости за да бидете во тек со активностите на Mozilla, вклучувајќи совети, трикови и идеи како да добиете најмногу од Вашиот Firefox. Ова е совршен начин да бидеме во контакт!
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
+Штотуку Ви испративме порака за потврда. Кликнете на врската за потврда за да се претплатите на оваа листа.
 
 
 ;Read all about it in our <span>newsletter</span>
-Read all about it in our <span>newsletter</span>
+Читајте сѐ во нашиот <span>билтен</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Вашата претплата на билтенот е потврдена.
 
 
 ;Format
-Format
+Формат
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Сѐ е спремно! <span>Но, има уште</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Ги сакате најважните информации? Кажете ни уште нешто за себе и претплатете се на други вести од Mozilla.
 
 
 ;Firefox & You
-Firefox & You
+Firefox & Вие
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Нашите други билтени:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Добијте ги најновите совети и трикови за искористување на сите можности на Вашиот омилен прелистувач.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox за мобилни уреди
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Дознајте за најжешките нови додатоци и особености на Firefox за мобилни уреди.
+
 
 
 ;Beta News
-Beta News
+Вести за Beta 
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Прочитајте за последните особености на Firefox за десктоп и мобилни уреди пред последното издание.
+
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Да бидеме пријатели!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox е и на Вашите омилени друштвени мрежи. Поврзете се со нас и приклучете се во разговорите.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Уредете ги Вашите <span>претплати на билтени</span>
 
 
 ;Subscribe
-Subscribe
+Претплати се
 
 
 ;Unsubscribe
-Unsubscribe
+Откажи ја претплатата
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Изберете го ова ако сакате да бидете отстранети од сета пошта од Mozilla
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Отстрани ме од сета пошта од Mozilla
 
 
 ;Save Preferences
-Save Preferences
+Сними ги преференциите
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Благодариме што ги дополнивте преференциите за е-пошта.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Претплатата е откажана.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Жалиме што си одите. Дали би ни кажале поради кои причини си одите?
 
 
 ;You send too many emails.
-You send too many emails.
+Испраќате многу пораки.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Содржината на пораката не е важна за мене.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Дизајнот ја прави пораката тешка за читање.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Не се претплатив на ова.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Ја следам Mozilla на Facebook и Twitter.
 
 
 ;Submit
-Submit
+Испрати
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Благодариме што ни кажавте зошто си одите.
 
 
