[sk] update mobile.lang, part 1
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104530 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sk/mobile.lang
+++ b/sk/mobile.lang
@@ -2,63 +2,63 @@
 
 
 ;Get Firefox for Android
-Get Firefox for Android
+Získať Firefox pre Android
 
 
 ;Download for <span>Android</span>
-Download for <span>Android</span>
+Prevziať pre <span>Android</span>
 
 
 ;Free from the Android Market
-Free from the Android Market
+Zadarmo z Android Marketu
 
 
 ;Or visit <a %s>Firefox.com/m</a> on your phone.
-Or visit <a %s>Firefox.com/m</a> on your phone.
+Alebo navštívte <a %s>Firefox.com/m</a> vo svojom telefóne.
 
 
 ;Supported Devices
-Supported Devices
+Podporované zariadenia
 
 
 ;Get it from iTunes - FREE
-Get it from iTunes - FREE
+Získať z iTunes - ZADARMO
 
 
 ;Firefox Home for <span>iPhone</span>
-Firefox Home for <span>iPhone</span>
+Firefox Home pre <span>iPhone</span>
 
 
 ;Access your Firefox history, bookmarks and open tabs on your iPhone.
-Access your Firefox history, bookmarks and open tabs on your iPhone.
+Pristupujte k histórii prehliadania Firefoxu, záložkám a otvoreným kartám vo svojom iPhone.
 
 
 ;Download Firefox to <span>Your Mobile</span>
-Download Firefox to <span>Your Mobile</span>
+Prevziať Firefox do <span>vášho mobilu</span>
 
 
 ;Want to test the latest features?
-Want to test the latest features?
+Chcete otestovať najnovšie funkcie?
 
 
 ;Get Firefox Home for iPhone
-Get Firefox Home for iPhone
+Získať Firefox Home pre iPhone
 
 
 ;Download Beta for Android
-Download Beta for Android
+Prevziať verziu Beta pre Android
 
 
 ;Download
-Download
+Prevziať
 
 
 ;for
-for
+pre
 
 
 ;Free from iTunes
-Free from iTunes
+Zadarmo z iTunes
 
 
 ;You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
@@ -66,31 +66,30 @@ You’ll get to experience cutting-edge features and provide feedback to help re
 
 
 ;Developer Tools
-Developer Tools
+Vývojárske nástroje
 
 
 ;You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
-You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
+Mobilnú verziu Firefoxu si môžete nainštalovať aj na svoj počítač, aby ste ho mohli otestovať, poskytnúť nám spätnú väzbu či vytvárať doplnky.
 
 
 ;Connect With Firefox for Mobile:
-Connect With Firefox for Mobile:
+Buďte v spojení s mobilným Firefoxom:
 
 
 ;Monthly newsletter
-Monthly newsletter
+Mesačné reporty
 
 
 ;Follow us
-Follow us
-
+Sledujte nás
 
 ;Become a fan
-Become a fan
+Staňte sa fanúšikom
 
 
 ;Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
-Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
+Firefox je plný inovácií, vďaka ktorým píšete menej, viac prehliadate a dostanete sa na web rýchlo a jednoducho.
 
 
 ;Freedom from typing
@@ -118,14 +117,14 @@ Features like Sync, tabbed browsing and one-touch bookmarking mean everything yo
 
 
 ;<a %s>Need help?</a> Visit our Firefox for Android Support site.
-<a %s>Need help?</a> Visit our Firefox for Android Support site.
+<a %s>Potrebujete pomoc?</a> Navštívte stránky podpory pre Firefox pre Android.
 
 
 ;Download and test the build that’s right for you.
-Download and test the build that’s right for you.
+Nainštalujte a otestujte zostavenie, ktoré je pre vás to najvhodnejšie.
 
 
 ;See all our channels for mobile »
-See all our channels for mobile »
+Zobraziť všetky kanály pre mobilný Firefox »
 
 
