[sk] update mobile.lang, part 2
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104532 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sk/mobile.lang
+++ b/sk/mobile.lang
@@ -2,7 +2,7 @@
 
 
 ;Get Firefox for Android
-Získať Firefox pre Android
+Získajte Firefox pre Android
 
 
 ;Download for <span>Android</span>
@@ -62,7 +62,7 @@ Zadarmo z iTunes
 
 
 ;You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
-You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
+Budete si môcť vyskúšať najnovšie funkcie a poskytnúť spätnú väzbu, ktorá pomôže pri dolaďovaní finálnej verzie prehliadača.
 
 
 ;Developer Tools
@@ -89,31 +89,31 @@ Staňte sa fanúšikom
 
 
 ;Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
-Firefox je plný inovácií, vďaka ktorým píšete menej, viac prehliadate a dostanete sa na web rýchlo a jednoducho.
+Firefox je plný inovácií, vďaka ktorým menej píšete, viac prehliadate a dostanete sa na web rýchlo a jednoducho.
 
 
 ;Freedom from typing
-Freedom from typing
+Sloboda od písania
 
 
 ;The Awesome Screen learns your favorite sites so you can browse with little or no typing.
-The Awesome Screen learns your favorite sites so you can browse with little or no typing.
+Inteligentný prehliadač sa učí vaše obľúbené stránky, takže prehliadate len s minimálnym zadávaním textu.
 
 
 ;Best of both worlds
-Best of both worlds
+Najlepší pre oba svety
 
 
 ;Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
-Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
+Firefox pre Android bol upravený a optimalizovaný pre prehliadanie na mobiloch a tabletoch.
 
 
 ;Browse quick and easy
-Browse quick and easy
+Jednoduché a rýchle prehliadanie
 
 
 ;Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
-Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
+Funkcie ako synchronizácia, prehliadanie na kartách a záložky na jeden dotyk sú všetko, čo potrebujete.
 
 
 ;<a %s>Need help?</a> Visit our Firefox for Android Support site.
