Fixed a couple of typos. Updates to the bug:#745588
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104550 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/bn-IN/upgradedialog.lang
+++ b/bn-IN/upgradedialog.lang
@@ -23,7 +23,7 @@ Firefox ৩.৬-র তুলনায় অনেক দ্রুত
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-আন-লাইন আক্রমণের হাত থেকে প্রতিরোধ করতে সক্ষম Firefox-র একটি নতুন সংস্করণ বর্তমানে উপলব্ধ রয়েছে।
+অন-লাইন আক্রমণের হাত থেকে প্রতিরোধ করতে সক্ষম Firefox-র একটি নতুন সংস্করণ বর্তমানে উপলব্ধ রয়েছে।
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -47,7 +47,7 @@ Firefox ৩.৬-র তুলনায় অনেক দ্রুত
 
 
 ;Stay safe online
-আন-লাইন অবস্থায় নিরাপদ থাকুন
+অন-লাইন অবস্থায় নিরাপদ থাকুন
 
 
 ;Enjoy new features
