--- a/et/upgradedialog.lang
+++ b/et/upgradedialog.lang
@@ -23,7 +23,7 @@ Palju kiirem kui Firefox 3.6
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Saadaval on uus versioon Firefoxist. See kaitseb sind veebirünnakute vastu paremini.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -31,19 +31,19 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+saa osa viimastest turvauuendustest
 
 
 ;experience faster performance
-naudi suuremat jõudlust
+koge suuremat jõudlust
 
 
 ;enjoy greater customization
-enjoy greater customization
+naudi rohkemaid kohandamisvõimalusi
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+See versioon Firefoxist on varsti haavatav veebirünnakute poolt.
 
 
 ;Stay safe online
@@ -63,30 +63,30 @@ Sinu Firefoxi versioon pole enam internetirünnete eest kaitstud.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+See on viimane hoiatus enne Firefoxi automaatset uuendamist viimasele versioonile
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox ei toeta enam sinu operatsioonisüsteemi versiooni ja on haavatav veebirünnakute poolt.
 
 
 ;We recommend:
-We recommend:
+Me soovitame:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+uuendada arvuti <a %s>operatsioonisüsteemi</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+laadida alla ühilduv brauser
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+paigaldada tasuta uuendus arvuti <a %s>operatsioonisüsteemile</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Enne automaatset uuendamist hoiatatakse sind veel üks kord.
 
 
