[sk] update snippets.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104561 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sk/snippets.lang
+++ b/sk/snippets.lang
@@ -82,46 +82,46 @@ Nainštalujte si Firefox pre váš tablet s OS Android a pocítite silu webu vo 
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Nainštalujte si Firefox Beta</a>, poskytnite nám reakciu a pomôžte tak urobiť nasledujúcu verziu Firefoxu pre 450 miliónov používateľov ešte lepšou.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+Testujte funkcie, pripomienkujte ich a pomáhajte nám tak urobiť našu nasledujúcu verziu ešte lepšou. <a href="%">Nainštalujte si Firefox Beta ešte dnes</a>!
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+Máte radi Firefox? Chcete pomôcť urobiť nasledujúcu verziu ešte lepšou? <a href="%">Nainštalujte si Firefox Beta</a> a dajte nám vedieť, čo si myslíte!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+Používate najnovšiu verziu Firefox Beta? <a href="%">Nainštalujte si ju</a> a pomôžte nám otestovať najnovšie funkcie.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+Nepoužívate poslednú verziu Firefox Beta? <a href="%">Získajte ju ešte dnes</a> a majte prehľad o tom, čo bude v nasledujúcej verzii Firefoxu.
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+Chcete nám poslať reakciu? <a href="%">Pozrite sa</a>, ako nám môžete pomôcť urobiť nasledujúcu verziu Firefoxu ešte lepšou.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+Používatelia Firefox Beta: Nezabudnite <a href="%">poslať reakciu</a>, ktorá nám pomôže zlepšiť našu nasledujúcu verziu.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Pomôžte urobiť nasledujúcu verziu Firefoxu ešte lepšou. a href="%">Zapojte sa do Partnerského programu</a> a zdieľajte informácie o Firefox Beta s priateľmi.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+Pozvite priateľov, aby sa pozreli na pripravované novinky vo Firefoxe. <a href="%">Zapojte sa do Partnerského programu</a> a zdieľajte informácie o Firefox Aurora ešte dnes.
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Používate Firefox na viacerých počítačoch? Teraz máte možnosť medzi nimi synchronizovať svoje doplnky. <a href="%">Prečítajte si, ako si aktivovať službu Sync.</a>
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Rýchly, rýchly, rýchly. <a %s>Firefox pre Android bol výrazne vylepšený</a>. Dajte o tom vedieť svojmu okoliu.
 
 
