Updated file entries for BugID:745631
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104571 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/or/upgradedialog.lang
+++ b/or/upgradedialog.lang
@@ -3,27 +3,27 @@
 
 
 ;The Newest Firefox is Here!
-The Newest Firefox is Here!
+ନୂତନତମ Firefox ଏଠାରେ ଉପଲବ୍ଧ!
 
 
 ;<a %s>Quick, easy and free update</a>
-<a %s>Quick, easy and free update</a>
+<a %s>ତୀବ୍ର, ସହଜମୟ ଏବଂ ମାଗଣା ଅଦ୍ୟତନ</a>
 
 
 ;Fresh new look
-Fresh new look
+ନୂତନ ଅବତାର
 
 
 ;Much faster than Firefox 3.6
-Much faster than Firefox 3.6
+Firefox 3.6 ଠାରୁ ଅଧିକ ତୀବ୍ରତର
 
 
 ;More awesomeness than ever
-More awesomeness than ever
+ପୂର୍ବ ଅପେକ୍ଷା ଅଧିକ ପ୍ରଭାବଶାଳୀ
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+ଆପଣଙ୍କୁ ଅନଲାଇନ ଆକ୍ରମଣରୁ ରକ୍ଷା କରିବା ପାଇଁ  Firefox ର ଏକ ନୂତନ ସଂସ୍କରଣ ଉପଲବ୍ଧ।
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -31,7 +31,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+ନୂତନତମ ସୁରକ୍ଷା ଗ୍ରହଣ କରନ୍ତୁ
 
 
 ;experience faster performance
@@ -39,11 +39,11 @@ get the latest in security
 
 
 ;enjoy greater customization
-enjoy greater customization
+ଅଧିକ ଇଚ୍ଛାରୂପଣ ସୁବିଧାକୁ ଉପଭୋଗ କରନ୍ତୁ
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+ଆପଣଙ୍କର ଏହି Firefox ସଂସ୍କରଣ ଅତିଶୀଘ୍ର ଅନଲାଇନ ଆକ୍ରମଣ ଦୃଷ୍ଟିରୁ ଅସୁରକ୍ଷିତ ହୋଇଯିବ।
 
 
 ;Stay safe online
@@ -63,30 +63,30 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+ସ୍ୱୟଂଚାଳିତ ଭାବରେ ନୂତନତମ ସଂସ୍କରଣକୁ ଅଦ୍ୟତିତ କରିବା ପୂର୍ବରୁ ଏହା ଶେଷଥର ପାଇଁ ଆପଣଙ୍କୁ ସ୍ମରଣ କରାଉଛି
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox ବର୍ତ୍ତମାନ ଆପଣଙ୍କର ପ୍ରଚାଳନ ତନ୍ତ୍ର ସଂସ୍କରଣକୁ ସହାୟତା କରୁନାହିଁ ଏବଂ ଅନଲାଇନ ଆକ୍ରମଣ ଦୃଷ୍ଟିରୁ ଅସୁରକ୍ଷିତ ହୋଇଯିବ।
 
 
 ;We recommend:
-We recommend:
+ଆମ ପରାମର୍ଶ:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+ଆପଣଙ୍କର <a %s>ପ୍ରଚାଳନ ତନ୍ତ୍ର</a> କୁ ଅଦ୍ୟତନ କରୁଅଛି
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+ଏକ ସୁସଙ୍ଗତ ବ୍ରାଉଜର ଆହରଣ କରୁଅଛି
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+ଆପଣଙ୍କ <a %s>ପ୍ରଚାଳନ ତନ୍ତ୍ର</a> ରେ ଏକ ମାଗଣା ଉନ୍ନୟନ ସ୍ଥାପନ କରୁଅଛି
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+ସ୍ୱୟଂଚାଳିତ ଭାବରେ ଅଦ୍ୟତନ କରିବା ପୂର୍ବରୁ ଆପଣଙ୍କୁ ପୁଣି ଥରେ ପଚରାଯିବ।
 
 
