--- a/sl/snippets.lang
+++ b/sl/snippets.lang
@@ -122,7 +122,7 @@ Uporabljate Firefox na večih računalnikih? Dodatke lahko sedaj sinhronizirate 
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Hitrost! <a %s>Firefox za Android je pravkar dobil veliko posodobitev</a>. Pomagajte nam širiti vest.
 
 
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
