Bug#745648, Bug#727071 and other .lang files
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104591 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/th/main.lang
+++ b/th/main.lang
@@ -339,66 +339,65 @@ Firefox ปรับรุ่นแล้ว
 
 
 ;Get Firefox for Android
-Get Firefox for Android
+ติดตั้ง Firefox สำหรับ Android
 
 
 ;Download for <span>Android</span>
-Download for <span>Android</span>
+Download สำหรับ <span>Android</span>
 
 
 ;Free from the Android Market
-Free from the Android Market
+ติดตั้งฟรีจาก Android Market
 
 
 ;Desktop
-Desktop
+คอมพิวเตอร์ตั้งโต๊ะ
 
 
 ;Firefox Beta for mobile
-Firefox Beta for mobile
+Firefox Beta สำหรับอุปกรณ์เคลื่อนที่
 
 
 ;Firefox for mobile
-Firefox for mobile
+Firefox สำหรับอุปกรณ์เคลื่อนที่
 
 
 ;Email
-Email
+อีเมล
 
 
 ;Mozilla Firefox. Bringing the modern Web to XP.
-Mozilla Firefox. Bringing the modern Web to XP.
+Mozilla Firefox นำเว็บรุ่นใหม่มาสู่ Windows XP
 
 
 ;Super speed
-Super speed
+เร็วสุดยอด
 
 
 ;Stunning graphics
-Stunning graphics
+กราฟฟิคตระการตา
 
 
 ;The latest technologies
-The latest technologies
+เทคโนโลยีล่าสุด
 
 
 ;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
-You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
+คุณกำลังใช้งาน Firefox รุ่นเก่า ปรับรุ่นเพื่อให้มั่นใจว่าปลอดภัยอยู่เสมอ! <br /> <a href="%s">ปรับรุ่นฟรี</a> ภายในเวลาไม่กี่นาทีเพื่อรับความสามารถใหม่ล่าสุด การแก้ไขความเร็วและความปลอดภัย
 
 
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
-You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
+คุณจำเป็นต้องปรับรุ่น! มั่นใจว่าปลอดภัยอยู่เสมอภายในเวลาไม่กี่นาที <br /> เริ่มใช้งาน Firefox เพื่อการท่องเว็บและการปรับแต่งที่ดีที่สุด <br /> เร็วและฟรี!
 
 
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
-You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
+คุณกำลังใช้งาน Firefox รุ่นเก่า <a href="%s">ปรับรุ่น</a> เพื่อรักษาความปลอดภัย! ลองประสบการณ์กับความสามารถล่าสุด, ความปลอดภัยที่ดีและ Firefox ที่เร็วที่สุด ดาวน์โหลดการปรับรุ่นฟรีภายในไม่กี่นาที
 
 
 ;Upgrade now
-Upgrade now
+ปรับรุ่นทันที
 
 
 ;Update now
-Update now
-
+ปรับปรุงทันที
 
