--- a/th/newsletter.lang
+++ b/th/newsletter.lang
@@ -50,43 +50,43 @@
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
+บอกรับข่าวรายเดือนเพื่อเกาะติดข่าวที่เกี่ยวข้องกับ Mozilla เช่น กลเม็ดเคล็ดลับล่าสุดในการใช้งาน Firefox ให้มีประสิทธิภาพสูงสุด นี่เป็นหนทางที่ดีที่เราจะใกล้ชิดกัน
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
+เราเพิ่งจะส่งข้อความยืนยันไปยังอีเมลของคุณ คลิกที่ลิงก์ยืนยันในอีเมลเพื่อตรวจสอบการบอกรับอีเมลกลุ่มนี้
 
 
 ;Read all about it in our <span>newsletter</span>
-Read all about it in our <span>newsletter</span>
+อ่านต่อใน <span>จดหมายข่าว</span> ของเรา
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+ยืนยันการบอกรับจดหมายข่าวของคุณแล้ว
 
 
 ;Format
-Format
+รูปแบบ
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+เรียบร้อยแล้ว! <span>แต่เดี๋ยวรอสักครู่ ยังมีต่ออีกนิด</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+ต้องการได้ข้อมูลที่ตรงประเด็นมากที่สุด? ให้ข้อมูลส่วนตัวของคุณกับเราเพิ่มเติม และลองบอกรับข่าว Mozilla อื่นๆ
 
 
 ;Firefox & You
-Firefox & You
+Firefox และคุณ
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+จดหมายข่าวอื่นๆ ของเรา:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+รับกลเม็ดเคล็ดลับล่าสุดที่จะทำให้คุณใช้เบราว์เซอร์ที่คุณโปรดปรานได้อย่างมีประสิทธิภาพที่สุด
 
 
 ;Firefox Mobile
@@ -94,86 +94,86 @@ Firefox Mobile
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+เรียนรู้เกี่ยวกับส่วนเสริมและความสามารถสุดเจ๋งของ Firefox mobile
 
 
 ;Beta News
-Beta News
+ข่าว Beta
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+อ่านเรื่องที่เกี่ยวกับความสามารถล่าสุดของ Firefox สำหรับคอมพิวเตอร์ตั้งโต๊ะและอุปกรณ์เคลื่อนที่ก่อนที่จะออกตัวจริง
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+มาเป็นเพื่อนกัน!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox ก็อยู่บนเว็บเครือข่ายสังคมสุดโปรดของคุณ มาเป็นเพื่อนกันและเข้าร่วมการสนทนา
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+จัดการ <span>การบอกรับจดหมายข่าว</span> ของคุณ
 
 
 ;Subscribe
-Subscribe
+บอกรับ
 
 
 ;Unsubscribe
-Unsubscribe
+ยกเลิกการบอกรับ
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+เลือกข้อนี้ถ้าคุณต้องการออกจากทุกอีเมลของ Mozilla
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+เอาฉันออกจากทุกอีเมลของ Mozilla
 
 
 ;Save Preferences
-Save Preferences
+บันทึกการตั้งค่า
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+ขอบคุณที่ปรับปรุงการตั้งค่าอีเมลของคุณ
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+คุณได้บอกรับแล้ว
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+เราเสียใจที่เห็นคุณจากไป แต่ก่อนคุณจะไป คุณจะบอกได้ไหมว่าทำไมคุณถีงต้องไป?
 
 
 ;You send too many emails.
-You send too many emails.
+คุณส่งอีเมลมามากเกินไป
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+เนื้อหาของคุณไม่น่าสนใจ
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+อีเมลของคุณอ่านยาก
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+ฉันไม่ได้บอกรับจดหมายข่าวนี้
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+ฉันจะไปใช้ Facebook และ Twitter ในการติดตามข่าวแทน
 
 
 ;Submit
-Submit
+ส่ง
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+ขอบคุณที่บอกเราว่าทำไมคุณถึงต้องจากไป
 
 
