--- a/th/firefoxtesting.lang
+++ b/th/firefoxtesting.lang
@@ -2,15 +2,15 @@
 
 
 ;Download Firefox Beta for Android - Free
-Download Firefox Beta for Android - Free
+ดาวน์โหลด Firefox Beta สำหรับ Android - ฟรี
 
 
 ;Download Firefox Beta for Desktop - Free
-Download Firefox Beta for Desktop - Free
+ดาวน์โหลด Firefox Beta สำหรับคอมพิวเตอร์ตั้งโต๊ะ - ฟรี
 
 
 ;Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
-Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
+ดาวน์โหลดและทดสอบ Firefox รุ่นก่อนตัวจริง ทดลองประสบการณ์กับนวัตกรรมใหม่ล่าสุดกับรุ่น Aurora หรือ Beta
 
 
 ;Firefox Beta
@@ -18,42 +18,42 @@ Firefox Beta
 
 
 ;Firefox Beta for:
-Firefox Beta for:
+Firefox Beta สำหรับ:
 
 
 ;Firefox Beta for Mobile
-Firefox Beta for Mobile
+Firefox Beta สำหรับอุปกรณ์เคลื่อนที่
 
 
 ;Download Beta and be part of the next version of Firefox.
-Download Beta and be part of the next version of Firefox.
+ดาวน์โหลด Beta และร่วมเป็นส่วนหนึ่งของ Firefox รุ่นถัดไป
 
 
 ;1. Test Features
-1. Test Features
+1. ทดลองความสามารถ
 
 
 ;Try out the latest performance, customization and security enhancements almost ready for prime time.
-Try out the latest performance, customization and security enhancements almost ready for prime time.
+ทดลองประสิทธิภาพล่าสุด, การปรับแต่งและการปรับปรุงความปลอดภัยที่ใกล้จะเปิดตัวให้ใช้งานตริง
 
 
 ;2. Refine &amp; Polish
-2. Refine &amp; Polish
+2. ปรับแต่งและขัดเกลา
 
 
 ;File bugs to help us put the final tweaks on performance and functionality in a stable environment.
-File bugs to help us put the final tweaks on performance and functionality in a stable environment.
+แจ้งความผิดพลาดเพื่อช่วยเราปรับแต่งประสิทธิภาพและความสามารถขั้นสุดท้าย
 
 
 ;3. Do Your Part
-3. Do Your Part
+3. คุณเป็นส่วนหนึ่ง
 
 
 ;Have an impact on the next version of Firefox and the 450 million people who use it every day.
-Have an impact on the next version of Firefox and the 450 million people who use it every day.
+ช่วยทำให้ Firefox ดียิ่งขึ้นไปเพื่อผู้ใช้ทั้ง 450 ล้านคน ที่ใช้ Firefox อยู่ทุกวัน
 
 
 ;Supported devices
-Supported devices
+อุปกรณ์ที่รองรับ
 
 
