Bug fix #745632: Translation for UpgradeDialog completed
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104601 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/pa-IN/snippets.lang
+++ b/pa-IN/snippets.lang
@@ -82,7 +82,7 @@ Firefox for Android is now optimized for the way you browse on tablets. <a href=
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">ਫਾਇਰਫਾਕਸ ਬੀਟਾ ਡਾਊਨਲੋਡ ਕਰੋ</a>, ਸੁਝਾਅ ਦਿਉ ਅਤੇ ਅਗਲੇ ਫਾਇਰਫਾਕਸ ਵਰਜਨ ਨੂੰ ਸਾਡੇ 45 ਕਰੋੜ ਯੂਜ਼ਰ ਲਈ ਹੋਰ ਵੀ ਵਧੀਆ ਬਣਾਉਣ ਲਈ ਮੱਦਦ ਕਰੋ।
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
@@ -94,7 +94,7 @@ Test features, refine and polish them and help us make our next version better t
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+ਕੀ ਤੁਸੀਂ ਨਵਾਂ ਨਕੋਰ ਬੀਟਾ ਚਲਾ ਰਹੇ ਹੋ? <a href="%">ਇਹ ਹੁਣੇ ਲਵੋ</a> ਅਤੇ ਨਵੇਂ ਫੀਚਰ ਟੈਸਟ ਕਰਕੇ ਸਾਡੀ ਮੱਦਦ ਕਰੋ।
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
@@ -106,7 +106,7 @@ Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of w
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+ਫਾਇਰਫਾਕਸ ਬੀਟਾ ਯੂਜ਼ਰ।  ਸਾਡੀ ਮੱਦਦ ਕਰਨ ਵਾਸਤੇ <a href="%">ਸੁਝਾਅ ਦੇਣੇ</a> ਨਾ ਭੁੱਲਣਾ ਤਾਂ ਕਿ ਅਸੀਂ ਅਗਲੇ ਰੀਲਿਜ਼ ਵਿੱਚ ਅੰਤਿਮ ਸੁਧਾਰ ਕਰ ਸਕੀਏ।
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
@@ -118,10 +118,10 @@ Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us 
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+ਫਾਇਰਫਾਕਸ ਨੂੰ ਕਈ ਕੰਪਿਊਟਰਾਂ ਉੱਤੇ ਵਰਤਦੇ ਹੋ? ਹੁਣ ਤੁਸੀਂ ਆਪਣੇ ਐਡ-ਆਨ ਨੂੰ ਉਹਨਾਂ ਸਭ ਉੱਤੇ ਸਿੰਕ ਕਰ ਸਕਦੇ ਹੋ। <a href="%">ਸਿੱਖੋ ਕਿ ਸਿੰਕ ਨੂੰ ਐਕਟੀਵੇਟ ਕਿਵੇਂ ਕਰੀਏ।</a>
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+ਤੇਜ਼, ਤੇਜ਼, ਤੇਜ਼। <a %s>ਐਡਰਾਇਡ ਲਈ ਫਾਇਰਫਾਕਸ ਨੂੰ ਵੱਡੇ ਪੱਧਰ ਉੱਤੇ ਅੱਪਗਰੇਡ ਕੀਤਾ ਗਿਆ ਹੈ।</a>। ਸੰਸਾਰ ਵਿੱਚ ਫੈਲਾਉਣ ਲਈ ਸਾਡੀ ਮੱਦਦ ਕਰੋ।
 
 
