--- a/pa-IN/upgradedialog.lang
+++ b/pa-IN/upgradedialog.lang
@@ -87,6 +87,6 @@
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+ਆਪਣੇ-ਆਪ ਅੱਪਡੇਟ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ ਤੁਹਾਨੂੰ ਇੱਕ ਵਾਰ ਫੇਰ ਪੁੱਛਿਆ ਜਾਵੇਗਾ।
 
 
