Localize latest Android snippet
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104603 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/nl/snippets.lang
+++ b/nl/snippets.lang
@@ -122,6 +122,6 @@ Gebruikt u Firefox op meerdere computers? U kunt er nu add-ons tussen synchronis
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Snel, snel, snel. <a %s>Firefox voor Android heeft net een grote upgrade gehad</a>. Help ons en vertel het door.
 
 
