--- a/ast/snippets.lang
+++ b/ast/snippets.lang
@@ -122,6 +122,6 @@ Invita a los tos collacios a que vean les carauterístique que va tener Firefox 
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Rápido, rápido, rápido. <a %s>Firefox p'Android acaba d'anovase</a>. Ayúdanos a difundilo.
 
 
